feat(tier2): supporting infra — buildroot pipeline, model assets, Console+BE polish
Pulls in the rest of the Tier-2 boot work that pairs with the Linux-boot fix:

  * tools/buildroot/ — Docker-based Buildroot pipeline (Dockerfile,
    build.sh wrapper, entrypoint.sh with the SKIP_LEGACY=y +
    CONFIG_DIR=$(O) Makefile patches that work around minux's checked-in
    config drift and Buildroot's EXDEV-on-rename in cross-volume builds).
    output/ stays gitignored; firmware blobs are sourced from there at
    build time per build.gradle's `from(file('tools/buildroot/output'))`.
  * Control Plane model + textures — full block/item models, blockstate,
    front/back/side/top/bottom textures, lang strings.
  * ConsoleCapture: bumped DEFAULT_CAPACITY 4 KB → 64 KB so OpenSBI's
    trap-error tail (mtval/mepc/mstatus) survives when the kernel won't
    boot — exactly what we needed for this debugging session.
  * ControlPlaneBlockEntity: defensive `Throwable` catch + vmBootFailed
    flag around bootVm so a fatal VM construction error degrades to a
    visible "boot failed" state instead of nuking the BE.
  * SednaSerializerRegistration: small init-order safety added.
  * docs/12-followups.md: writeup of the Sedna JPMS access patch (the
    R5CPUGenerator defineClass → Lookup.defineClass rewrite that enabled
    Sedna to load under NeoForge's child-layer module loading).

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>